Fixing fight alignment

--- a/frontend/src/app/components/fight/duel/user-score/fault/fault.component.scss
+++ b/frontend/src/app/components/fight/duel/user-score/fault/fault.component.scss
@@ -1,5 +1,9 @@
 .fault {
   height: 50px;
   width: 25px;
-  background-color: #555;
+  border-width: 1px;
+  border-color: #011d4a;
+  border-style: solid;
+  padding-left: 5px;
+  padding-right: 5px;
 }
